Modify truncated distribution and included proportion of taxes payed. Step before trying to modify PIT to fit theoretical values.

--- a/Figures/Figures.tex
+++ b/Figures/Figures.tex
@@ -197,7 +197,13 @@ AfterTaxProfitPercentile
 
 \includegraphics[width=1\textwidth]{/Users/rodrigoazuero/Dropbox/OptmalTaxationShared/Data/git/OptimalTaxation/TheoreticalMoments/EvasionProportion.png}
 
+\includegraphics[width=1\textwidth]{/Users/rodrigoazuero/Dropbox/OptmalTaxationShared/Data/git/OptimalTaxation/TheoreticalMoments/EvasionProportion.png}
+
 \includegraphics[width=1\textwidth]{/Users/rodrigoazuero/Dropbox/OptmalTaxationShared/Data/git/OptimalTaxation/TheoreticalMoments/EvasionProportionPercentiles.png}
+
+\includegraphics[width=1\textwidth]{/Users/rodrigoazuero/Dropbox/OptmalTaxationShared/Data/git/OptimalTaxation/TheoreticalMoments/EvasionValuesPercentiles.png}
+
+\includegraphics[width=1\textwidth]{/Users/rodrigoazuero/Dropbox/OptmalTaxationShared/Data/git/OptimalTaxation/TheoreticalMoments/TaxesPayedProportion.png}
 
 \includegraphics[width=1\textwidth]{/Users/rodrigoazuero/Dropbox/OptmalTaxationShared/Data/git/OptimalTaxation/TheoreticalMoments/FormalDemand.png}
 
