Decrease mean os ttheta, solver works properly. Check TheoreticalMoments/Readme.txt

--- a/Figures/Figures.tex
+++ b/Figures/Figures.tex
@@ -252,6 +252,12 @@ AfterTaxProfitPercentile
 \includegraphics[width=1\textwidth]{/Users/rodrigoazuero/Dropbox/OptmalTaxationShared/Data/git/OptimalTaxation/TheoreticalMoments/TotalIncomePercentiles.png}
 
 
+\includegraphics[width=1\textwidth]{/Users/rodrigoazuero/Dropbox/OptmalTaxationShared/Data/git/OptimalTaxation/TheoreticalMoments/TaxratePayedPercentiles.png}
+
+\includegraphics[width=1\textwidth]{/Users/rodrigoazuero/Dropbox/OptmalTaxationShared/Data/git/OptimalTaxation/TheoreticalMoments/TaxratePITPercentiles.png}
+
+
+
 
 \end{document}
 
