--- a/AWS/README
+++ b/AWS/README
@@ -19,6 +19,7 @@ mainTesla.cpp is equal to the main.cpp defined to run locally but it is
 important to take into account that the dictionaries change and some function definitions also are modified. 
 Careful! Only modify the corresponding functions from main.cpp to mainTesla.cpp. 
 (Example void SobolRun is loaded differently to guarantee succesful parallelization). 
+A copy and paste ALL approach might fail since functions are sometimes defined differently. Modify simultaneously main.cpp and mainTesla.cpp
 
 Recall to configure the necessary details (number of threads, etc.).  
 
